fixed nav, no overlap now

--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,8 @@ body {
   padding-left: 20rem;
   text-align: justify;
 }
+
+.navbar-main {
+  background-color: var(--main-bg-color);
+  
+}
